Overflowing text fix

--- a/modules/related-posts/related-posts.css
+++ b/modules/related-posts/related-posts.css
@@ -160,6 +160,9 @@ div.jp-relatedposts .jp-relatedposts-post-thumbs .jp-relatedposts-post-excerpt {
 }
 
 /* Behavior when there are no thumbnails in visual mode */
+div.jp-relatedposts .jp-relatedposts-post-nothumbs .jp-relatedposts-post-excerpt {
+	overflow: hidden;
+}
 div.jp-relatedposts .jp-relatedposts-post-nothumbs span {
 	margin-bottom: 1em;
 }
